@@ -19,7 +19,7 @@ SUBDIRS = docs
 
 pylibdir = @PYTHON_LIB@/site-packages
 
-pylib_SCRIPTS = @PYTHON_MODERN_OR_OLDE@/xapian.py xapian.pyc
+pylib_SCRIPTS = @PYTHON_MODERN_OR_OLDE@/xapian.py @PYTHON_MODERN_OR_OLDE@/xapian.pyc
 
 pylib_LTLIBRARIES = _xapian.la
 
@@ -36,8 +36,19 @@ _xapian_la_SOURCES = @PYTHON_MODERN_OR_OLDE@/xapian_wrap.cc \
 	@PYTHON_MODERN_OR_OLDE@/xapian_wrap.h
 _xapian_la_LIBADD = $(XAPIAN_LIBS)
 
-xapian.pyc: @PYTHON_MODERN_OR_OLDE@/xapian.py
-	PYTHONPATH=@PYTHON_MODERN_OR_OLDE@:.libs $(PYTHON) -c "import xapian"
+# In a distribution, xapian.py is in $(srcdir), and python will always
+# generate the .pyc file in the same directory as the .py file.  However,
+# we can't expect to be allowed to write to $(srcdir), so we copy the
+# .py file to the build directory instead.
+@PYTHON_MODERN_OR_OLDE@/xapian.pyc: @PYTHON_MODERN_OR_OLDE@/xapian.py
+	if test -f "@PYTHON_MODERN_OR_OLDE@/xapian.py"; then \
+	  PYTHONPATH=@PYTHON_MODERN_OR_OLDE@:.libs $(PYTHON) -c "import xapian" || exit 1; \
+	else \
+	  test -d @PYTHON_MODERN_OR_OLDE@ || mkdir @PYTHON_MODERN_OR_OLDE@; \
+	  cp "$(srcdir)/@PYTHON_MODERN_OR_OLDE@/xapian.py" "@PYTHON_MODERN_OR_OLDE@/xapian.py" || exit 1; \
+	  PYTHONPATH=@PYTHON_MODERN_OR_OLDE@:.libs $(PYTHON) -c "import xapian" || exit 1; \
+	  rm "@PYTHON_MODERN_OR_OLDE@/xapian.py" || exit 1; \
+	fi
 
 if MAINTAINER_MODE
 # "modern" versions are for Python 2.2 and up;  "olde" versions are for earlier
@@ -53,8 +64,8 @@ olde/xapian_wrap.cc olde/xapian_wrap.h olde/xapian.py: ../xapian.i util.i extra.
 	$(SWIG) -I$(srcdir) @SWIG_FLAGS@ -c++ -python -shadow \
 	    -o olde/xapian_wrap.cc $(srcdir)/../xapian.i
 
-CLEANFILES = $(BUILT_SOURCES) xapian.pyc
+CLEANFILES = $(BUILT_SOURCES) @PYTHON_MODERN_OR_OLDE@/xapian.pyc
 else
 MAINTAINERCLEANFILES = $(BUILT_SOURCES)
-CLEANFILES = xapian.pyc
+CLEANFILES = @PYTHON_MODERN_OR_OLDE@/xapian.pyc
 endif
